--- a/index.css
+++ b/index.css
@@ -1,14 +1,189 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .wrapper {
-  width: 500px;
-  height: 500px;
-  background-color: lavender;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2c2f69;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 10px solid lightslategray;
+
+  position: relative;
 }
 
 .text {
   font-size: 50px;
-  color: black;
+  color: lavender;
+}
+
+.button {
+  padding: 15px 30px;
+  background-color: #f5cf52;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  box-shadow: 1px 1px 100px 0px rgba(209, 217, 68, 0.85);
+}
+
+.hidden {
+  display: none;
+}
+
+.fireworkWraper {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2c2f69;
+  position: relative;
+}
+.firework {
+  position: absolute;
+}
+.explosion {
+  position: absolute;
+  left: -2px;
+  bottom: 0;
+  width: 4px;
+  height: 80px;
+  transform-origin: 50% 100%;
+  /* background-color: rgba(0,0,0,.2); */
+  overflow: hidden;
+}
+.explosion:nth-child(1) {
+  transform: rotate(0deg) translateY(-15px);
+}
+.explosion:nth-child(2) {
+  transform: rotate(30deg) translateY(-15px);
+}
+.explosion:nth-child(3) {
+  transform: rotate(60deg) translateY(-15px);
+}
+.explosion:nth-child(4) {
+  transform: rotate(90deg) translateY(-15px);
+}
+.explosion:nth-child(5) {
+  transform: rotate(120deg) translateY(-15px);
+}
+.explosion:nth-child(6) {
+  transform: rotate(150deg) translateY(-15px);
+}
+.explosion:nth-child(7) {
+  transform: rotate(180deg) translateY(-15px);
+}
+.explosion:nth-child(8) {
+  transform: rotate(210deg) translateY(-15px);
+}
+.explosion:nth-child(9) {
+  transform: rotate(240deg) translateY(-15px);
+}
+.explosion:nth-child(10) {
+  transform: rotate(270deg) translateY(-15px);
+}
+.explosion:nth-child(11) {
+  transform: rotate(300deg) translateY(-15px);
+}
+.explosion:nth-child(12) {
+  transform: rotate(330deg) translateY(-15px);
+}
+
+.explosion::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  height: 40px;
+  background-color: #f5cf52;
+}
+@keyframes explosion {
+  0% {
+    top: 100%;
+  }
+  33%,
+  100% {
+    top: -50%;
+  }
+}
+
+#firework1 {
+  left: 45%;
+  top: 65%;
+  transform: scale(1);
+}
+#firework1 .explosion::before {
+  animation: explosion 2s ease-in-out infinite;
+}
+
+#firework2 {
+  left: 10%;
+  top: 15%;
+  transform: scale(0.7);
+}
+#firework2 .explosion::before {
+  animation: explosion 2s 0.6s ease-in-out infinite;
+}
+
+#firework3 {
+  left: 80%;
+  top: 85%;
+  transform: scale(0.4);
+}
+#firework3 .explosion::before {
+  animation: explosion 2s 0.3s ease-in-out infinite;
+}
+
+#firework4 {
+  left: 30%;
+  top: 35%;
+  transform: scale(0.6);
+}
+#firework4 .explosion::before {
+  animation: explosion 2s 0.9s ease-in-out infinite;
+}
+
+#firework5 {
+  left: 80%;
+  top: 15%;
+  transform: scale(0.7);
+}
+#firework5 .explosion::before {
+  animation: explosion 2s 0.1s ease-in-out infinite;
+}
+
+#firework6 {
+  left: 15%;
+  top: 65%;
+  transform: scale(0.7);
+}
+#firework6 .explosion::before {
+  animation: explosion 2s 1s ease-in-out infinite;
+}
+
+#firework7 {
+  left: 85%;
+  top: 45%;
+  transform: scale(0.5);
+}
+#firework7 .explosion::before {
+  animation: explosion 2s 0.5s ease-in-out infinite;
+}
+
+#firework8 {
+  left: 55%;
+  top: 15%;
+  transform: scale(0.5);
+}
+#firework8 .explosion::before {
+  animation: explosion 2s 0.3s ease-in-out infinite;
 }
